--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,7 +25,7 @@
   display: flex;
 
   font-size: 13px;
-  color: white;
+  color: aquamarine;
   font-weight: 550;
 }
 @media only screen and (max-width: 720px) {
@@ -36,6 +36,7 @@
     display: none;
   }
   .logo {
+    display: none;
     font-size: 15px;
   }
 }
