--- a/src/components/header/mobile/mobile.css
+++ b/src/components/header/mobile/mobile.css
@@ -12,6 +12,7 @@
 }
 .close-icon {
   display: flex;
+  color: aquamarine;
   justify-content: flex-end;
   font-size: 24px;
 }
@@ -33,6 +34,6 @@
 }
 .mobile-option a {
   text-decoration: none;
-  color: white;
+  color: aquamarine;
   display: flex;
 }
