--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -8,7 +8,14 @@
   align-items: center;
 }
 .picture {
-  height: 420px;
+  margin-top: 50px;
+  width: 330px;
+  height: 330px;
+  cursor: pointer;
+  border-radius: 3%;
+  border-color: #8892b0;
+  border-style: solid;
+  opacity: 0.9;
 }
 .about-info {
   font-size: 24px;
@@ -24,7 +31,14 @@
     align-items: center;
   }
   .picture {
-    height: 280px;
+    width: 330px;
+    height: 330px;
+    cursor: pointer;
+    border-radius: 50%;
+    border-color: #8892b0;
+    border-style: solid;
+    opacity: 0.9;
+    align-items: center;
   }
   .about-info {
     font-size: 20px;
