--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -30,6 +30,7 @@
 @media only screen and (max-width: 720px) {
   .mobile-menu {
     display: flex;
+    cursor: pointer;
   }
   .web-menu {
     display: none;
