--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -13,7 +13,7 @@
   height: 330px;
   cursor: pointer;
   border-radius: 3%;
-  border-color: #8892b0;
+  border-color: aqua;
   border-style: solid;
   
 }
@@ -35,7 +35,7 @@
     width: 330px;
     height: 330px;
     border-radius: 50%;
-    border-color: #8892b0;
+    border-color: aqua;
     border-style: solid;
     align-items: center;
   }
