--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -12,10 +12,10 @@
   width: 330px;
   height: 340px;
   cursor: pointer;
-  border-radius: 3%;
-  border-color: aqua;
+  border-radius: 50%;
+  border-color: white;
   border-style: solid;
-  
+  content:url("C:\Users\Shanmukh Chowdary\Desktop\shanmukhchowdary147.github.io-main\src\assets\image\me9~4.jpg");
 }
 .about-info {
   font-size: 24px;
@@ -35,9 +35,11 @@
     width: 330px;
     height: 340px;
     border-radius: 50%;
-    border-color: aqua;
+    border-color: white;
     border-style: solid;
     align-items: center;
+    content:url("C:\Users\Shanmukh Chowdary\Desktop\shanmukhchowdary147.github.io-main\src\assets\image\me9~2.jpg");
+
   }
   .about-info {
     font-size: 20px;
