--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -13,7 +13,7 @@
   height: 340px;
   cursor: pointer;
   border-radius: 50%;
-  border-color: white;
+  border-color: aqua;
   border-style: solid;
   content:url("C:\Users\Shanmukh Chowdary\Desktop\shanmukhchowdary147.github.io-main\src\assets\image\me9~4.jpg");
 }
