--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -17,12 +17,15 @@
   border-style: solid;
 }
 .about-info {
-  font-size: 24px;
+  font-size: 19px;
+  margin-right: 15px;
+  color: #8892b0;
 }
 .info-name {
-  font-size: 32px;
+  font-size: 40px;
   margin-right: 10px;
-  color: blue;
+  color: white;
+  font-weight: 900;
 }
 @media only screen and (max-width: 720px) {
   .about-top {
@@ -40,8 +43,12 @@
   }
   .about-info {
     font-size: 20px;
+    color: white;
   }
   .info-name {
     font-size: 26px;
+  }
+  .info-about{
+    display: none;
   }
 }
