--- a/src/components/body/contact/contact.css
+++ b/src/components/body/contact/contact.css
@@ -21,7 +21,7 @@
 }
 
 .download {
-  background-color: aquamarine;
+  background-color: #64ffda;
   padding: 8px 16px;
   font-size: 24px;
   display: flex;
