--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -17,14 +17,14 @@
   border-style: solid;
 }
 .about-info {
-  font-size: 19px;
-  margin-right: 15px;
-  color: #8892b0;
+  font-size: 16px;
+  margin-right: 30px;
+  color: white;
 }
 .info-name {
-  font-size: 40px;
+  font-size: 45px;
   margin-right: 10px;
-  color: white;
+  color: blue;
   font-weight: 900;
 }
 @media only screen and (max-width: 720px) {
