--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -19,12 +19,12 @@
 .about-info {
   font-size: 16px;
   margin-right: 30px;
-  color: white;
+  color: #8892b0;
 }
 .info-name {
   font-size: 45px;
   margin-right: 10px;
-  color: blue;
+  color: white;
   font-weight: 900;
 }
 @media only screen and (max-width: 720px) {
@@ -47,6 +47,8 @@
   }
   .info-name {
     font-size: 26px;
+    color: blue;
+    font-weight:normal;
   }
   .info-about{
     display: none;
