--- a/src/components/body/about/about.css
+++ b/src/components/body/about/about.css
@@ -8,6 +8,17 @@
   align-items: center;
 }
 .picture {
+  height: 420px;
+}
+.about-info {
+  font-size: 24px;
+}
+.info-name {
+  font-size: 32px;
+  margin-right: 10px;
+  color: blue;
+}
+/* .picture {
   margin-top: 50px;
   width: 330px;
   height: 340px;
@@ -15,8 +26,8 @@
   border-radius: 50%;
   border-color: white;
   border-style: solid;
-}
-.about-info {
+} */
+/* .about-info {
   font-size: 16px;
   margin-right: 30px;
   color: #8892b0;
@@ -25,8 +36,9 @@
   font-size: 45px;
   margin-right: 10px;
   color: white;
-  font-weight: 900;
-}
+  font-family: 'Oswald';
+  font-weight: 700;
+} */
 /* .hire {
   margin-top: 30px;
   padding: 8px 16px;
@@ -50,13 +62,16 @@
     justify-content: center;
   }
   .picture {
+    height: 280px;
+  }
+  /* .picture {
     width: 330px;
     height: 340px;
     border-radius: 50%;
     border-color: white;
     border-style: solid;
     align-items: center;
-  }
+  } */
   .about-info {
     font-size: 20px;
     color: white;
