--- a/src/components/body/projects/project-card.css
+++ b/src/components/body/projects/project-card.css
@@ -1,7 +1,7 @@
 .project-card {
   flex: 1;
   display: flex;
-  color: #8892b0;
+  color: white;
   justify-content: space-between;
   align-items: center;
   margin: 16px 0px;
