--- a/src/components/body/work/work.css
+++ b/src/components/body/work/work.css
@@ -19,9 +19,14 @@
 }
 .educat {
   display: flex;
-  color: white;
   flex-direction: column;
   width: 100%;
+}
+.educat p1{
+  color: white;
+}
+.educat p2{
+  color: #8892b0;
 }
 .work-list {
   display: flex;
