--- a/src/components/stic/style.css
+++ b/src/components/stic/style.css
@@ -2,12 +2,12 @@
     top: 20%;
     cursor: pointer;
     font-family: 'Courier New', Courier, monospace;
-    right: 130px;
+    right: 110px;
     width: 20px;
     height: 200px;
     position: fixed;
     color: #64ffda;
-    font-size: 17px;
+    font-size: 19px;
     line-height: 1.2;
     white-space: nowrap;
     transform: rotate( -270deg);
@@ -37,7 +37,7 @@
     left: -7px;
     width: 68px;
     height: 20px;
-    color: aquamarine;
+    color: #64ffda;
     font-size: 12px;
     font-weight: 600;
     line-height: 1.2;
