--- a/src/components/stic/style.css
+++ b/src/components/stic/style.css
@@ -1,5 +1,5 @@
 .emailright {
-    top: 20%;
+    bottom: 50%;
     cursor: pointer;
     font-family: 'Courier New', Courier, monospace;
     right: 110px;
