--- a/src/components/body/work/work.css
+++ b/src/components/body/work/work.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
 }
 .pic {
-  width: 330px;
-  height: 340px;
+  width: 340px;
+  height: 350px;
   border-radius: 50%;
   border-color: white;
   border-style: solid;
@@ -24,10 +24,13 @@
   width: 100%;
 }
 .educat p1{
-  color: white;
+  font-size:19px;
+  font-family: 'Courier New', Courier, monospace;
+  color: #64ffda;
 }
 .educat p2{
-  color: #8892b0;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
 }
 .work-list {
   display: flex;
