--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@
   }
 }
 .namediv {
-  /* position: absolute; */
+  position: absolute;
   inset: 0;
   background-color: #01152b;
   opacity: 100%;
