--- a/src/components/body/work/work.css
+++ b/src/components/body/work/work.css
@@ -3,13 +3,20 @@
   justify-content: space-between;
 }
 .pic {
-  width: 330px;
+  width: 340px;
   height: 350px;
   border-radius: 50%;
   border-color: white;
   border-style: solid;
   align-items: center;
   cursor: pointer;
+}
+
+.tempclass {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .work {
