--- a/src/components/header/web/web.css
+++ b/src/components/header/web/web.css
@@ -1,10 +1,11 @@
 .web {
+  margin-top: 20px;
   display: flex;
   flex: 1;
   align-items: center;
 }
 .web-option {
-  font-size: 20px;
+  font-size: 18px;
   margin-right: 16px;
   font-weight: 700;
 }
@@ -23,4 +24,12 @@
 
 .web-option:last-child {
   margin-right: 0px;
+  font-size: 18px;
+  color: #64ffda;
+  /* padding: 5px 15px;
+  border: 1px solid aquamarine; */
+}
+
+.web-option:last-child a {
+  color: #64ffda;
 }
