--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Poppins&display=swap");
 body {
   background-color: #01152b;
   /* Shannu top */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.emailright {
+  bottom: 50%;
+  cursor: pointer;
+  font-family: "Courier New", Courier, monospace !important;
+}
+* {
+  font-family: "Poppins", sans-serif;
+}
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
