--- a/src/components/body/projects/project1.css
+++ b/src/components/body/projects/project1.css
@@ -27,6 +27,10 @@
   left: 50px;
 }
 
+.cardp a {
+  text-decoration: none;
+  color: black;
+}
 @media screen and (max-width: 720px) {
   .cardp {
     min-width: 300px;
