--- a/src/components/body/projects/project1.css
+++ b/src/components/body/projects/project1.css
@@ -20,9 +20,7 @@
 /* .cardp:not(:first-child) {
   margin-left: -50px;
 } */
-.cardp:hover {
-  transform: translateY(-20px);
-}
+
 .cardp:hover ~ .cardp {
   left: 50px;
 }
@@ -31,6 +29,12 @@
   text-decoration: none;
   color: black;
 }
+@media (min-width: 720px) {
+  .cardp:hover {
+    transform: translateY(-20px);
+  }
+}
+
 @media screen and (max-width: 720px) {
   .cardp {
     min-width: 300px;
