--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,6 +1,6 @@
-body {
-  font-family: 'Work Sans', sans-serif;
-}
+/* body {
+  font-family: "Work Sans", sans-serif;
+} */
 html {
   scroll-behavior: smooth;
 }
