--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,14 @@ body {
   background-color: #01152b;
   /* Shannu top */
   margin: 0;
+  font-family: "Poppins", sans-serif;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.emailright {
-  bottom: 50%;
-  cursor: pointer;
-  font-family: "Courier New", Courier, monospace !important;
-}
-* {
+* ~ .emailright {
   font-family: "Poppins", sans-serif;
 }
 
