--- a/src/components/body/work/work.css
+++ b/src/components/body/work/work.css
@@ -31,6 +31,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-right: 5px;
+  margin-bottom: 20px;
 }
 .intro-para p {
   font-size: 17px;
