--- a/src/components/body/work/work.css
+++ b/src/components/body/work/work.css
@@ -50,50 +50,155 @@
   align-items: center;
   margin: 0px 0px;
 }
-.education-extracircular {
+
+.education {
+  display: flex;
+}
+.notable-extracircular {
   width: 100%;
   display: flex;
   justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
-.educat-extra {
-  box-sizing: border-box;
-  padding: 20px;
-  box-shadow: 0 0 10px 1px black;
+.notable-extracir-card,
+.education-box {
+  /* box-sizing: border-box; */
+  /* padding: 20px; */
+  /* box-shadow: 0 0 10px 1px black; */
   /* box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.5), 5px 5px 5px rgba(0, 0, 0, 0.1); */
   border-radius: 12px;
   background-color: #01152b;
-  max-width: 400px;
-  margin: 12px;
+  /* max-width: 400px; */
+  margin: 0 12px;
+  /* transition: opacity 0.3s ease; */
   /* flex-grow: 1;
   flex-basis: 0;
   flex-grow: 1; */
 }
 
-.educat-extra ul {
+.notable-extracir-card {
+  padding: 0 40px;
+}
+.notable-extracir-card h3,
+.education-box h3 {
+  margin-top: 0px;
+}
+
+.notable-extracir-card ul,
+.education-box ul {
   list-style-type: none;
 }
 
-.educat-extra ul li::before {
+.notable-extracir-card ul li::before,
+.education-box ul li::before {
   content: "➤";
   color: #64ffda; /* Replace with your desired color */
   margin-right: 5px;
 }
 
-.educat-extra p2 {
+.notable-extracir-card p2 {
   color: rgb(159, 159, 159);
 }
+
+.notable-extracir-card {
+  min-width: 50%;
+  /* transition: opacity 0.3s ease; */
+}
+
+.education-heading {
+  width: 100%;
+  padding: 0 0 0 40px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.container-menu {
+  display: flex;
+  /* box-sizing: border-box; */
+  /* padding: 20px; */
+  border-radius: 12px;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
+  /* box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.5), 5px 5px 5px rgba(0, 0, 0, 0.1); */
+  border-radius: 12px;
+  background-color: #01152b;
+}
+
+.info-menu {
+  width: 200px;
+  background-color: #01152b;
+  padding: 20px;
+}
+
+.menu-item {
+  cursor: pointer;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.menu-item:hover {
+  background-color: #ccc;
+}
+
+.menu-item.active {
+  background-color: #555;
+  color: #fff;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+.education-item {
+  margin: 0 20px 0 0;
+  padding: 0;
+}
+
 @media only screen and (max-width: 720px) {
   .about {
     flex-direction: column;
     justify-content: center;
   }
-  .education-extracircular {
+  .notable-extracircular {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+  .notable-extracir-card,
+  .education-box {
+    margin: 0;
+    padding: 10px;
+  }
   .intro-para {
     margin-bottom: 25px;
+  }
+  .content {
+    padding: 0 20px;
+  }
+
+  .container-menu {
+    width: 100%;
+    flex-direction: column;
+  }
+  .info-menu {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .menu-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .education {
+    display: flex;
+    flex-direction: column;
   }
 }
